--- a/pages/globals.css
+++ b/pages/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.project-description {
+  display: none;
+}
+.project-data:hover .project-description {
+  display: block;
+}
