--- a/pages/globals.css
+++ b/pages/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Helvetica';
+  src: url('../public/fonts/Helvetica.ttf');
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/Inter-Bold.ttf');
+}
+
 .project-description {
   display: none;
 }
